src/style.css
:root {
  --heading-font: "Playfair Display ", serif;
  --secondary-font: "Poppins", sans-serif;
  --primary-color: #6c63ff;
  --secondary-color: #ede9fa;
}

body {
  margin-bottom: 80px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--heading-font);
}

h1 {
  font-weight: bold;
  font-style: normal;
  font-size: 96px;
}

h2 {
  font-size: 60px;
  margin-top: 30px;
}

h3 {
  font-family: var(--secondary-font);
  font-size: 24px;
}

p {
  font-family: var(--secondary-font);
  line-height: 30px;
}

a {
  display: block;
  margin: auto;
}

i {
  font-size: 25px;
  color: var(--primary-color);
  background-color: var(--secondary-color);
  border-radius: 50px;
  padding: 12px 10px;
  box-sizing: content-box;
  margin-left: 25px;
}

.hero h2 {
  font-family: var(--secondary-font);
  font-weight: normal;
  font-size: 24px;
}

.hero p {
  font-family: var(--secondary-font);
  font-weight: bold;
  font-style: normal;
  font-size: 36px;
}

.hero {
  text-align: center;
  padding: 200px;
  background-color: var(--secondary-color);
}

.btn-branding {
  background-color: var(--primary-color);
  font-family: var(--secondary-font);
  padding: 15px 25px;
  font-size: 18px;
  border-radius: 4px;
  color: white;
  text-decoration: none;
}
.btn-projects {
  background-color: white;
  font-family: var(--secondary-font);
  padding: 15px 20px;
  font-size: 16px;
  border: 1px solid var(--primary-color);
  border-radius: 4px;
  color: var(--primary-color);
  text-decoration: none;
}

.project-descriptions {
  margin: 20px;
}

.btn-inquiry {
  background-color: var(--primary-color);
  font-family: var(--secondary-font);
  padding: 15px 20px;
  font-size: 16px;
  border-radius: 4px;
  color: white;
  text-decoration: none;
  margin-top: 60px;
  margin-left: 200px;
}

.homepage-container {
  max-width: 80%;
  display: block;
  margin: auto;
}

.icons {
  margin-top: 40px;
}

.icons a {
  display: inline;
}

.page-container {
  padding: 100px 200px;
}

.page-container h2 {
  font-weight: bold;
  font-size: 64px;
  line-height: 1;
  margin-bottom: 30px;
}
.page-container h3 {
  font-size: 18px;
  font-weight: bold;
  margin: 30px 0;
}
.page-container p {
  font-size: 16px;
  opacity: 60%;
  margin-bottom: 20px;
}

.page-info {
  margin: 30px;
}

.contact-box {
  margin-top: 80px;
  padding: 40px;
  background-color: var(--secondary-color);
  border-radius: 8px;
}

.contact-box h3 {
  font-family: var(--heading-font);
  font-size: 40px;
}

.contact-box p {
  opacity: 70%;
}

.active {
  color: var(--primary-color) !important;
}

@media (max-width: 900px) {
  h1 {
    font-size: 45px;
    text-align: center;
  }

  h2 {
    font-size: 40px;
    margin-top: 20px;
  }

  footer h3 {
    font-size: 20px;
  }

  i {
    font-size: 20px;
    margin-left: 15px;
  }

  .hero h2 {
    font-size: 20px;
  }

  .hero p {
    font-size: 28px;
  }

  .project-descriptions {
    text-align: center;
  }

  .hero {
    padding: 35px;
  }

  .btn-inquiry {
    display: flex;
    margin: auto;
  }

  .page-container {
    display: flex;
    justify-content: center;
    padding: none;
    text-align: center;
  }

  .page-container h2 {
    font-size: 50px;
  }

  .navbar-brand {
    margin-left: 0;
  }
}

